--- a/src/assets/partials/layouts/main.hbs
+++ b/src/assets/partials/layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=9">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{site.name}}</title>
-    <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" type="text/css" href="/app.css">
   </head>
   {{> global/header}}
   <div class="content">
